Fix CSS text wrapping for single selects
Select2 previously had an issue displaying the text of long values
as it was not correctly wrapping the text.  This was because the
browser did not know that it couldn't wrap at whitespace, which
has been fixed.

Now Select2 should properly display an ellipsis for large text
values instead of overflowing.

This closes https://github.com/select2/select2/issues/2984.

--- a/src/scss/_single.scss
+++ b/src/scss/_single.scss
@@ -11,10 +11,12 @@
 
   .select2-selection__rendered {
     display: block;
-    overflow: hidden;
     padding-left: 8px;
     padding-right: 20px;
+
+    overflow: hidden;
     text-overflow: ellipsis;
+    white-space: nowrap;
   }
 }
 
